# rust-lambda-handlers

./: Cargo.toml
.github/workflows/: ci-cd.yml
src/: main.rs
